# medapy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  todo.md
examples/: 1_ms_pandas.py  2_collection.py  3_etr_pandas.py  3_proc_pandas.py  4_etr_pandas.py  4_etr_twoband_fit.py  5_realistic_example.py
examples/files/: a_twoband_test_I1-5(10mA)_V20-21_Rxx_Bsweep.csv  a_twoband_test_I1-5(10mA)_V20-40_Rxy_Bsweep.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B-14to14T_T=10.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B-14to14T_T=15.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B-14to14T_T=22.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B-14to14T_T=3.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B-14to14T_T=5.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B14to-14T_T=10.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B14to-14T_T=15.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B14to-14T_T=22.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B14to-14T_T=3.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V2-3_V2-6_Rxx_sweepField_B14to-14T_T=5.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=15.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=17.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=25.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=27.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=3.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=3.0K_Pos=22.5Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=3.0K_Pos=45.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=3.0K_Pos=67.5Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=5.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B-14to14T_T=7.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=10.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=17.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=20.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=27.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=3.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=3.0K_Pos=90.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=40.0K_Pos=0.0Deg.csv  sample_I1-5(0.5uA)_V6-7_V3-7_Rxx_sweepField_B14to-14T_T=7.0K_Pos=0.0Deg.csv  (+24 more)
(+26 files in other folders)
