[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medapy"
version = "0.1.0a1"
description = "A Python package to work with measured data"
dependencies = [
  "numpy>=2.2",
  "pandas>=2.2",
  "pint>=0.24",
  "pint-pandas>=0.7",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"

[project.optional-dependencies]
fit = [
  "scipy>=1.15",
  "numdifftools>=0.9",
  "lmfit>=1.3"
]
plot = [
  "matplotlib>=3.10",
]
all = ["medapy[fit, plot]"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["medapy"]

# authors = [
#   { name="example", email="example" },
# ]
# license-files = ["LICENSE.txt"]




