[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medapy"
version = "0.1.1-alpha"
description = "A Python package to work with measured data"
dependencies = [
  "numpy>=2.2",
  "pandas>=2.2",
  "pint>=0.24",
  "pint-pandas>=0.7",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"

[project.optional-dependencies]
fit = [
  "scipy>=1.15",
  "numdifftools>=0.9",
  "lmfit>=1.3"
]
plot = [
  "matplotlib>=3.10",
]
all = ["medapy[fit, plot]"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["medapy"]

[project.urls]
Homepage = "https://github.com/razorgecko/medapy"

# authors = [
#   { name="example", email="example" },
# ]

# [project.urls]
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# Issues = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"



